--- a/presentations.html
+++ b/presentations.html
@@ -23,10 +23,6 @@ Author URL: http://w3layouts.com
   <nav class="navbar navbar-expand-lg navbar-light py-lg-3 py-2">
     <div class="container">
       <a class="navbar-brand" href="index.html"> Yun-Ting Cheng</a>
-      <!-- if logo is image enable this   
-    <a class="navbar-brand" href="#index.html">
-        <img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
-    </a> -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon fa fa-bars"></span>
@@ -57,6 +53,7 @@ Author URL: http://w3layouts.com
           </li>
           <li class="nav-item">
             <a class="nav-link" href="YunTingCheng_cv.pdf"target="_blank">CV</a>
+
           </li>
         </ul>
         
@@ -64,84 +61,76 @@ Author URL: http://w3layouts.com
     </div>
   </nav>
 </section>
-<section class="w3l-about-breadcrum">
+<section class="w3l-service-breadcrum">
   <div class="breadcrum-bg">
     <div class="container py-5">
-      <p><a href="index.html">Home</a> &nbsp; / &nbsp; Experiments</p>
+      <p><a href="index.html">Home</a> &nbsp; / &nbsp; Research</p>
      </div>
   </div>
 </section>
-
 
 <!-- w3l-content-photo-5 -->
 <!-- <div class="w3l-content-photo-5 py-5" id="about">
  -->  <div class="content-main pt-lg-5 pt-md-3 pb-0">
     <div class="container">
       <div class="row">
-          <p class="mb-0" style="font-size: 20px">I am a member of SPHEREx, CIBER and TIME collaboration. I primarily work on theoretical modeling, pipeline development, and data analysis for these experiments.</p>
+         <div class="col-lg-10 content-left mt-lg-0 mt-5 pl-lg-7">
+          <p class="mb-0">
+            <h1><b><p style="color:#0041C2;">Recent Presentation Recordings</p></b></h1>
+          </p>
         </div>
       </div>
     </div>
   </div>
 
-
-
 <!-- w3l-content-photo-5 -->
-<div class="w3l-content-photo-5 py-5" id="about">
-  <div class="content-main pt-lg-5 pt-md-3 pb-0">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4 content-photo">
-          <img src="imgs/spherex.jpeg" class="img-fluid" alt="content-photo"></a>
-        </div>
-        <div class="col-lg-8 content-left mt-lg-0 mt-5 pl-lg-7">
-          <h2><b>SPHEREx</b></h2>
-          <p class="mb-0"><a href="https://spherex.caltech.edu/"target="_blank">SPHEREx</a> (Spectro-Photometer for the History of the Universe, Epoch of Reionization, and Ices Explorer), a NASA Medium Explorer (MIDEX) mission, is scheduled for launch in early 2025. Designed to perform a spectral-imaging survey across the entire sky in the near-infrared spectrum (0.75 – 5 µm), SPHEREx aims to address three primary scientific objectives: 1) Probing the physics of inflation by detecting non-Gaussianity imprints in the large-scale structure of the universe. 2) Investigating the origins of water and biogenic molecules through the measurement of ice absorption spectra. 3) Exploring the origins and evolution of galaxies via a deep mapping in two deep fields located at the ecliptic poles. Furthermore, with near-infrared spectra of hundreds of millions of sources across the full sky, SPHEREx will generate a rich legacy catalog, enabling a wide range of scientific investigations.              <br>
-          <br>  
-          My main role in the SPHEREx collaboration is to characterize the systematic uncertainties within its cosmology pipeline, a critical challenge for accurately probing primordial non-Gaussianity using the SPHEREx galaxy catalog. Additionally, I also work on modeling the extragalactic background signal in the SPHEREx deep field images, which are intended for studying the history of galaxy evolution.            </div>
+<!-- <div class="w3l-content-photo-5 py-5" id="about">
+ -->  <div class="content-main pt-lg-5 pt-md-3 pb-0">
+  <div class="container">
+    <div class="row">
+       <div class="col-lg-12 content-left mt-lg-0 mt-5 pl-lg-7">
+        <p class="mb-0">
+          <div style="display: flex; justify-content: space-between;">
+            <div style="margin-right: 20px;">
+              Data-Driven Cosmology from 3D Light Cones<br>
+              (July 2022, Cosmology from Home conference)<br>
+              <iframe width="400" height="225" src="https://www.youtube.com/embed/Mx4MZ9Z2gIg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div>
+              Cosmology and Astrophysics from the Extragalactic Background Light<br>
+              (May 2022, ASIAA Seminar)<br>
+              <iframe width="400" height="225" src="https://www.youtube.com/embed/OFgtop1wmKM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          </div>
+          <br>
+        </p>
       </div>
     </div>
   </div>
 </div>
 
-
 <!-- w3l-content-photo-5 -->
-<div class="w3l-content-photo-5 py-5" id="about">
-  <div class="content-main pt-lg-5 pt-md-3 pb-0">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4 content-photo">
-          <img src="imgs/CIBER1.jpg" class="img-fluid" alt="content-photo"></a>
-        </div>
-        <div class="col-lg-8 content-left mt-lg-0 mt-5 pl-lg-7">
-          <h2><b>CIBER</b></h2>
-          <p class="mb-0"><a href="https://ciberrocket.github.io/"target="_blank">CIBER</a> (Cosmic Infrared Background ExpeRiment) is a sounding rocket experiment designed to probe the near-IR Extragalactic Background Light (EBL), the cumulative emission from all sources along the line of sight throughout cosmic time. CIBER has completed four flights between 2009 and 2013.              <br>
-          <br>   
-            I worked on analyzing CIBER 4th flight imaging data to study the "intra-halo light" component of the EBL, the extended emission around galaxies, using a stacking analysis. This work also involves the development of an end-to-end data analysis pipeline for CIBER's imaging instruments.            </div>
+<!-- <div class="w3l-content-photo-5 py-5" id="about">
+ -->  <div class="content-main pt-lg-5 pt-md-3 pb-0">
+  <div class="container">
+    <div class="row">
+       <div class="col-lg-10 content-left mt-lg-0 mt-5 pl-lg-7">
+        <p class="mb-0">
+          <h1><b><p style="color:#0041C2;">Full List of Presentations</p></b></h1>
+        </p>
       </div>
     </div>
   </div>
 </div>
 
-
-<!-- w3l-content-photo-5 -->
-<div class="w3l-content-photo-5 py-5" id="about">
-  <div class="content-main pt-lg-5 pt-md-3 pb-0">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4 content-photo">
-          <img src="imgs/TIME1.jpg" class="img-fluid" alt="content-photo"></a>
-        </div>
-        <div class="col-lg-8 content-left mt-lg-0 mt-5 pl-lg-7">
-          <h2><b>TIME</b></h2>
-          <p class="mb-0"><a href="https://cosmology.caltech.edu/projects/TIME"target="_blank">TIME</a> (Tomographic Ionized Carbon Intensity Mapping Experiment) is a millimeter-wavelength spectrometer deployed on the ALMA prototype antenna at Kitt Peak, Arizona. TIME  aims at mapping the [C II] emission line across redshifts 5 to 9, by capturing the large-scale intensity field through the emission of the ionized carbon line [C II]. This measurement will complement both HI 21 cm intensity mapping and traditional galaxy detection methods.              <br>
-            <br>
-            My contributions to TIME involve developing signal and foreground models for its analysis pipelines, helping with the deployment of the instrument, and analyzing instrument testing datasets. I've also developed methods to mitigate the impact of interloper lines in line intensity mapping, which will be valuable for future TIME data analyses.              </div>
-      </div>
-    </div>
-  </div>
+<br><br>
+<div class="container">
+<style>
+</style>
+  <object data="YunTingCheng_presentations.pdf" type="application/pdf" width="900" height="1150">
+      <p>Your browser does not support PDFs. Please download the PDF to view it: <a href="YunTingCheng_presentations.pdf">Download PDF</a>.</p>
+  </object>
 </div>
-
 
 
 <!-- //home page service grids -->
