--- a/publications.html
+++ b/publications.html
@@ -34,15 +34,30 @@ Author URL: http://w3layouts.com
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
+          <style>
+            .navbar-nav .nav-link {
+              font-size: 20px;
+              font-weight: bold;
+            }
+          </style>
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="research.html">Research</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="experiments.html">Experiments</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="presentations.html">Presentations</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="publications.html">Publications</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="YunTingCheng_cv.pdf"target="_blank">CV</a>
+
           </li>
         </ul>
         
@@ -58,60 +73,80 @@ Author URL: http://w3layouts.com
   </div>
 </section>
 
-<!-- w3l-content-photo-5 -->
-<!-- <div class="w3l-content-photo-5 py-5" id="about">
- -->  <div class="content-main pt-lg-5 pt-md-3 pb-0">
-    <div class="container">
-      <div class="row">
-         <div class="col-lg-12 content-left mt-lg-0 mt-5 pl-lg-5">
-          <p class="mb-0">Only first-author papers are listed here. Please find my complete list of publications on my <a href="https://yuntingcheng.github.io/YunTingCheng_cv.pdf"target="_blank">CV</a>, 
-            <a href="https://ui.adsabs.harvard.edu/public-libraries/BpppNfF-TomoEroImynnZA"target="_blank">ADS</a>, 
-            <a href="https://scholar.google.com/citations?user=EE0Ah5YAAAAJ&hl=en"target="_blank">Google Scholar</a>,  and 
-            <a href="http://inspirehep.net/author/profile/Yun.Ting.Cheng.1"target="_blank">INSPIRE</a>
-          <br><br>
-          <h3><b>First Author Papers</b></h3>
-          <br>
-          <h5>Data-driven Cosmology from Three-dimensional Light Cones</h5>
-          <b>Cheng, Y.-T.</b>, Wandelt, B., Chang, T.-C., & Doré, O. 2023, ApJ, 944, 151
-          (<a href="https://ui.adsabs.harvard.edu/abs/2023ApJ...944..151C/abstract"target="_blank">ADS</a>, 
-          <a href="https://arxiv.org/abs/2210.10052"target="_blank">arXiv: 2210.10052</a>)<br>
-          <br>
-          <h5>Near-infrared Extragalactic Background Light Fluctuations on Nonlinear Scales</h5>
-          <b>Cheng, Y.-T.</b> & Bock, J., 2022, ApJ, 940, 115
-          (<a href="https://ui.adsabs.harvard.edu/abs/2022ApJ...940..115C/abstract"target="_blank">ADS</a>, 
-          <a href="https://arxiv.org/abs/2207.13712"target="_blank">arXiv: 2207.13712</a>)<br>
-          <br>
-          <h5>Cosmic Near-Infrared Background Tomography with SPHEREx Using Galaxy Cross-Correlations</h5>
-          <b>Cheng, Y.-T.</b> & Chang, T.-C., 2022, ApJ, 925, 136
-          (<a href="https://ui.adsabs.harvard.edu/abs/2021arXiv210910914C/abstract"target="_blank">ADS</a>, 
-          <a href="https://arxiv.org/abs/2109.10914"target="_blank">arXiv: 2109.10914</a>)<br>
-          <br>
-          <h5>Probing Intra-Halo Light with Galaxy Stacking in CIBER Images</h5>
-          <b>Cheng, Y.-T.</b>, et al. (CIBER collaboration), 2021, ApJ, 919, 69
-          (<a href="https://ui.adsabs.harvard.edu/abs/2021ApJ...919...69C/abstract"target="_blank">ADS</a>, 
-          <a href="https://arxiv.org/abs/2103.03882"target="_blank">arXiv: 2103.03882</a>)<br>
-          <br>
-          <h5>Phase-Space Spectral Line De-confusion in Intensity Mapping</h5>
-          <b>Cheng, Y.-T.</b>, Chang, T.-C., & Bock, J. 2020, ApJ, 901, 142
-          (<a href="https://ui.adsabs.harvard.edu/abs/2020ApJ...901..142C/abstract"target="_blank">ADS</a>, 
-          <a href="https://arxiv.org/abs/2005.05341"target="_blank">arXiv: 2005.05341</a>)<br>
-          <br>
-          <h5>Optimally Mapping Large-scale Structures with Luminous Sources</h5>
-          <b>Cheng, Y.-T.</b>, de Putter, R., Chang, T.-C., & Doré, O. 2019, ApJ, 877, 86
-            (<a href="https://ui.adsabs.harvard.edu/abs/2019ApJ...877...86C/abstract"target="_blank">ADS</a>, 
-            <a href="https://arxiv.org/abs/1809.06384"target="_blank">arXiv: 1809.06384</a>)<br>
-          <br>
-          <h5>Spectral Line De-confusion in an Intensity Mapping Survey</h5>
-          <b>Cheng, Y.-T.</b>, Chang, T.-C., Bock, J., Bradford, C. M., & Cooray, A. 2016, ApJ, 832, 165
-          (<a href="https://ui.adsabs.harvard.edu/abs/2016ApJ...832..165C/abstract"target="_blank">ADS</a>, 
-          <a href="https://arxiv.org/abs/1604.07833"target="_blank">arXiv: 1604.07833</a>)<br>
-          <br><br>
-        </div>
+<div class="content-main pt-lg-5 pt-md-3 pb-0">
+  <div class="container">
+    <div class="row">
+       <div class="col-lg-12 content-left mt-lg-0 mt-5 pl-lg-5">
+        <p class="mb-0" style="font-size: 20px;">8 first-author publications (as of Mar 2024). See the full list below
+        <br>
       </div>
     </div>
   </div>
-  <br><br>
-<!-- </div> -->
+
+<br><br>
+<div class="container">
+<style>
+</style>
+  <object data="YunTingCheng_publications.pdf" type="application/pdf" width="900" height="1150">
+      <p>Your browser does not support PDFs. Please download the PDF to view it: <a href="YunTingCheng_publications.pdf">Download PDF</a>.</p>
+  </object>
+</div>
+
+
+<!--
+<div class="content-main pt-lg-5 pt-md-3 pb-0">
+  <div class="container">
+    <div class="row">
+       <div class="col-lg-12 content-left mt-lg-0 mt-5 pl-lg-5">
+        <p class="mb-0">Only first-author papers are listed here. Please find my complete list of publications on my <a href="https://yuntingcheng.github.io/YunTingCheng_cv.pdf"target="_blank">CV</a>, 
+          <a href="https://ui.adsabs.harvard.edu/public-libraries/BpppNfF-TomoEroImynnZA"target="_blank">ADS</a>, 
+          <a href="https://scholar.google.com/citations?user=EE0Ah5YAAAAJ&hl=en"target="_blank">Google Scholar</a>,  and 
+          <a href="http://inspirehep.net/author/profile/Yun.Ting.Cheng.1"target="_blank">INSPIRE</a>
+        <br><br>
+        <h3><b>First Author Papers</b></h3>
+        <br>
+        <h5>Data-driven Cosmology from Three-dimensional Light Cones</h5>
+        <b>Cheng, Y.-T.</b>, Wandelt, B., Chang, T.-C., & Doré, O. 2023, ApJ, 944, 151
+        (<a href="https://ui.adsabs.harvard.edu/abs/2023ApJ...944..151C/abstract"target="_blank">ADS</a>, 
+        <a href="https://arxiv.org/abs/2210.10052"target="_blank">arXiv: 2210.10052</a>)<br>
+        <br>
+        <h5>Near-infrared Extragalactic Background Light Fluctuations on Nonlinear Scales</h5>
+        <b>Cheng, Y.-T.</b> & Bock, J., 2022, ApJ, 940, 115
+        (<a href="https://ui.adsabs.harvard.edu/abs/2022ApJ...940..115C/abstract"target="_blank">ADS</a>, 
+        <a href="https://arxiv.org/abs/2207.13712"target="_blank">arXiv: 2207.13712</a>)<br>
+        <br>
+        <h5>Cosmic Near-Infrared Background Tomography with SPHEREx Using Galaxy Cross-Correlations</h5>
+        <b>Cheng, Y.-T.</b> & Chang, T.-C., 2022, ApJ, 925, 136
+        (<a href="https://ui.adsabs.harvard.edu/abs/2021arXiv210910914C/abstract"target="_blank">ADS</a>, 
+        <a href="https://arxiv.org/abs/2109.10914"target="_blank">arXiv: 2109.10914</a>)<br>
+        <br>
+        <h5>Probing Intra-Halo Light with Galaxy Stacking in CIBER Images</h5>
+        <b>Cheng, Y.-T.</b>, et al. (CIBER collaboration), 2021, ApJ, 919, 69
+        (<a href="https://ui.adsabs.harvard.edu/abs/2021ApJ...919...69C/abstract"target="_blank">ADS</a>, 
+        <a href="https://arxiv.org/abs/2103.03882"target="_blank">arXiv: 2103.03882</a>)<br>
+        <br>
+        <h5>Phase-Space Spectral Line De-confusion in Intensity Mapping</h5>
+        <b>Cheng, Y.-T.</b>, Chang, T.-C., & Bock, J. 2020, ApJ, 901, 142
+        (<a href="https://ui.adsabs.harvard.edu/abs/2020ApJ...901..142C/abstract"target="_blank">ADS</a>, 
+        <a href="https://arxiv.org/abs/2005.05341"target="_blank">arXiv: 2005.05341</a>)<br>
+        <br>
+        <h5>Optimally Mapping Large-scale Structures with Luminous Sources</h5>
+        <b>Cheng, Y.-T.</b>, de Putter, R., Chang, T.-C., & Doré, O. 2019, ApJ, 877, 86
+          (<a href="https://ui.adsabs.harvard.edu/abs/2019ApJ...877...86C/abstract"target="_blank">ADS</a>, 
+          <a href="https://arxiv.org/abs/1809.06384"target="_blank">arXiv: 1809.06384</a>)<br>
+        <br>
+        <h5>Spectral Line De-confusion in an Intensity Mapping Survey</h5>
+        <b>Cheng, Y.-T.</b>, Chang, T.-C., Bock, J., Bradford, C. M., & Cooray, A. 2016, ApJ, 832, 165
+        (<a href="https://ui.adsabs.harvard.edu/abs/2016ApJ...832..165C/abstract"target="_blank">ADS</a>, 
+        <a href="https://arxiv.org/abs/1604.07833"target="_blank">arXiv: 1604.07833</a>)<br>
+        <br><br>
+      </div>
+    </div>
+  </div>
+</div>
+<br><br>
+-->
+
 
 <!-- //home page service grids -->
  <!-- grids block 5 -->
@@ -188,4 +223,3 @@ Author URL: http://w3layouts.com
 
 </html>
 <!-- // grids block 5 -->
-
