--- a/research.html
+++ b/research.html
@@ -89,12 +89,33 @@ Author URL: http://w3layouts.com
     <div class="container">
       <div class="row">
         <div class="col-lg-4 content-photo">
+          <img src="imgs/BMLIM.png" class="img-fluid" alt="content-photo"></a>
+        </div>
+        <div class="col-lg-8 content-left mt-lg-0 mt-5 pl-lg-7">
+          <h4><b>Bayesian Multi-line Intensity Mapping</b></h4>
+          <p class="mb-0"><b>Cheng, Y.-T.</b>, Wang, K., Wandelt, B., Chang, T.-C., & Doré, O. <br>2024, ApJ, 971, 159
+            (<a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...971..159C/abstract"target="_blank">ADS</a>, 
+            <a href="https://arxiv.org/abs/2403.19740"target="_blank">arXiv: 2309.02490</a>)
+            <br><br>  
+            Line intensity mapping (LIM) is a promising tool for probing the 3D large-scale structure through the aggregate emission of spectral lines. However, the presence of interloper lines poses a crucial challenge in extracting the signal from the target line in LIM. In this work, we introduce a novel method for LIM analysis that simultaneously extracts line signals from multiple spectral lines, utilizing the covariance of native LIM data elements defined in the spectral-angular space. We leverage correlated information from different lines to perform joint inference on all lines simultaneously, employing a Bayesian analysis framework. We demonstrate that our technique can extract multiple lines  from SPHEREx with high sensitivity using mock power spectra. Our technique offers a flexible framework for LIM analysis, enabling simultaneous inference of signals from multiple line emissions while accommodating diverse modeling constraints and parameterizations.
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- w3l-content-photo-5 -->
+<div class="w3l-content-photo-5 py-5" id="about">
+  <div class="content-main pt-lg-5 pt-md-3 pb-0">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 content-photo">
           <img src="imgs/dipole.png" class="img-fluid" alt="content-photo"></a>
         </div>
         <div class="col-lg-8 content-left mt-lg-0 mt-5 pl-lg-7">
           <h4><b>Is the Radio Source Dipole from NVSS Consistent with the CMB and ΛCDM?</b></h4>
-          <p class="mb-0"><b>Cheng, Y.-T.</b>, Chang, T.-C., & Lidz, A. <br>2024, ApJ, accepted
-            (<a href="https://ui.adsabs.harvard.edu/abs/2023arXiv230902490C/abstract"target="_blank">ADS</a>, 
+          <p class="mb-0"><b>Cheng, Y.-T.</b>, Chang, T.-C., & Lidz, A. <br>2024, ApJ, 965, 32
+            (<a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...965...32C/abstract"target="_blank">ADS</a>, 
             <a href="https://arxiv.org/abs/2309.02490"target="_blank">arXiv: 2309.02490</a>)
             <br><br>  
             The dipole moment in the angular distribution of the cosmic microwave background (CMB) is thought to originate from the Doppler effect and our motion relative to the CMB frame. Observations of large-scale structure should exhibit a related "kinematic dipole" and help test the kinematic origin of the CMB dipole. Intriguingly, many previous LSS dipole studies suggest discrepancies with the expectations from the CMB. In this work, we reassess this tension by incorporating a model of clustering and shot noise in the NVSS dipole, which have been ignored in some previous works. Our results show that the NVSS dipole is consistent with a kinematic origin for the CMB dipole within the ΛCDM model, demonstrating the importance of accounting for clustering and shot-noise fluctuations in evaluating the dipole consistency.
