--- a/presentations.html
+++ b/presentations.html
@@ -92,12 +92,37 @@ Author URL: http://w3layouts.com
         <p class="mb-0">
           <div style="display: flex; justify-content: space-between;">
             <div style="margin-right: 20px;">
-              Data-Driven Cosmology from 3D Light Cones<br>
+              Studying cosmology and galaxy evolution <br>with Roman and SPHEREx<br>
+              (July 2024, Roman Community Workshop)<br>
+              <iframe width="400" height="225" src="https://www.youtube.com/embed/watch?v=JL3Ki-qLdjo&list=PL460A0YI_JsD4hgLTgjNFlk11vWiQeswD&index=20&pp=iAQB" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div>
+              Bayesian Multi-line Intensity Mapping<br><br>
+              (Jun 2024, LIM 2024 Workshop, UIUC)<br>
+              <br><br>
+              <a href="https://mediaspace.illinois.edu/media/t/1_l5uao0ig" target="_blank" style="font-size: 24px;">Watch the Video</a>
+            </div>
+          </div>
+          <br>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+ -->  <div class="content-main pt-lg-5 pt-md-3 pb-0">
+  <div class="container">
+    <div class="row">
+       <div class="col-lg-12 content-left mt-lg-0 mt-5 pl-lg-7">
+        <p class="mb-0">
+          <div style="display: flex; justify-content: space-between;">
+            <div style="margin-right: 20px;">
+              Data-Driven Cosmology from 3D Light Cones<br><br>
               (July 2022, Cosmology from Home conference)<br>
               <iframe width="400" height="225" src="https://www.youtube.com/embed/Mx4MZ9Z2gIg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div>
-              Cosmology and Astrophysics from the Extragalactic Background Light<br>
+              Cosmology and Astrophysics from <br>the Extragalactic Background Light<br>
               (May 2022, ASIAA Seminar)<br>
               <iframe width="400" height="225" src="https://www.youtube.com/embed/OFgtop1wmKM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
