--- a/research.html
+++ b/research.html
@@ -89,6 +89,27 @@ Author URL: http://w3layouts.com
     <div class="container">
       <div class="row">
         <div class="col-lg-4 content-photo">
+          <img src="imgs/dust.png" class="img-fluid" alt="content-photo"></a>
+        </div>
+        <div class="col-lg-8 content-left mt-lg-0 mt-5 pl-lg-7">
+          <h4><b>Galactic Dust Modeling with Gas Tracers</b></h4>
+          <p class="mb-0"><b>Cheng, Y.-T.</b>, Wang, K., Wandelt, B., Chang, T.-C., & Doré, O. <br>2024, ApJ, 971, 159
+            (<a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...971..159C/abstract"target="_blank">ADS</a>, 
+            <a href="https://arxiv.org/abs/2403.19740"target="_blank">arXiv: 2309.02490</a>)
+            <br><br>  
+            Neutral hydrogen (HI) emission is a powerful tracer for dust extinction at high Galactic latitude, which is a critical systematics for precision cosmology. In this work, we improve high-latitude HI-based dust templates by incorporating data from ionized and molecular gas phases. We make further improvements by employing a clustering analysis on the H I spectral data to identify discrete clouds with distinct dust properties. Our template has large-scale residuals at the level of <20% when fitting to the dust emission from Planck. We quantify the contributions to these residuals from variations in the dust-to-gas ratio, dust temperature and opacity, and magnetic field orientation using ancillary datasets.
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- w3l-content-photo-5 -->
+<div class="w3l-content-photo-5 py-5" id="about">
+  <div class="content-main pt-lg-5 pt-md-3 pb-0">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 content-photo">
           <img src="imgs/BMLIM.png" class="img-fluid" alt="content-photo"></a>
         </div>
         <div class="col-lg-8 content-left mt-lg-0 mt-5 pl-lg-7">
@@ -113,7 +134,7 @@ Author URL: http://w3layouts.com
           <img src="imgs/dipole.png" class="img-fluid" alt="content-photo"></a>
         </div>
         <div class="col-lg-8 content-left mt-lg-0 mt-5 pl-lg-7">
-          <h4><b>Is the Radio Source Dipole from NVSS Consistent with the CMB and ΛCDM?</b></h4>
+          <h4><b>Cosmic Dipole with Radio Sources - a Test of the ΛCDM model </b></h4>
           <p class="mb-0"><b>Cheng, Y.-T.</b>, Chang, T.-C., & Lidz, A. <br>2024, ApJ, 965, 32
             (<a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...965...32C/abstract"target="_blank">ADS</a>, 
             <a href="https://arxiv.org/abs/2309.02490"target="_blank">arXiv: 2309.02490</a>)
