--- a/research.html
+++ b/research.html
@@ -93,9 +93,9 @@ Author URL: http://w3layouts.com
         </div>
         <div class="col-lg-8 content-left mt-lg-0 mt-5 pl-lg-7">
           <h4><b>Galactic Dust Modeling with Gas Tracers</b></h4>
-          <p class="mb-0"><b>Cheng, Y.-T.</b>, Wang, K., Wandelt, B., Chang, T.-C., & Doré, O. <br>2024, ApJ, 971, 159
-            (<a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...971..159C/abstract"target="_blank">ADS</a>, 
-            <a href="https://arxiv.org/abs/2403.19740"target="_blank">arXiv: 2309.02490</a>)
+          <p class="mb-0"><b>Cheng, Y.-T.</b>, Hensley, B., Chang, T.-C., & Doré, O. <br>2024, ApJ, 971, 159
+            (<a href="https://ui.adsabs.harvard.edu/abs/2024arXiv241112801C/abstract"target="_blank">ADS</a>, 
+            <a href="https://arxiv.org/abs/2411.12801"target="_blank">arXiv: 2411.12801</a>)
             <br><br>  
             Neutral hydrogen (HI) emission is a powerful tracer for dust extinction at high Galactic latitude, which is a critical systematics for precision cosmology. In this work, we improve high-latitude HI-based dust templates by incorporating data from ionized and molecular gas phases. We make further improvements by employing a clustering analysis on the H I spectral data to identify discrete clouds with distinct dust properties. Our template has large-scale residuals at the level of <20% when fitting to the dust emission from Planck. We quantify the contributions to these residuals from variations in the dust-to-gas ratio, dust temperature and opacity, and magnetic field orientation using ancillary datasets.
           </div>
@@ -116,7 +116,7 @@ Author URL: http://w3layouts.com
           <h4><b>Bayesian Multi-line Intensity Mapping</b></h4>
           <p class="mb-0"><b>Cheng, Y.-T.</b>, Wang, K., Wandelt, B., Chang, T.-C., & Doré, O. <br>2024, ApJ, 971, 159
             (<a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...971..159C/abstract"target="_blank">ADS</a>, 
-            <a href="https://arxiv.org/abs/2403.19740"target="_blank">arXiv: 2309.02490</a>)
+            <a href="https://arxiv.org/abs/2403.19740"target="_blank">arXiv: 2403.19740</a>)
             <br><br>  
             Line intensity mapping (LIM) is a promising tool for probing the 3D large-scale structure through the aggregate emission of spectral lines. However, the presence of interloper lines poses a crucial challenge in extracting the signal from the target line in LIM. In this work, we introduce a novel method for LIM analysis that simultaneously extracts line signals from multiple spectral lines, utilizing the covariance of native LIM data elements defined in the spectral-angular space. We leverage correlated information from different lines to perform joint inference on all lines simultaneously, employing a Bayesian analysis framework. We demonstrate that our technique can extract multiple lines  from SPHEREx with high sensitivity using mock power spectra. Our technique offers a flexible framework for LIM analysis, enabling simultaneous inference of signals from multiple line emissions while accommodating diverse modeling constraints and parameterizations.
           </div>
