--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <div class="profile-header">
             <img src="images/profile.jpg" alt="Your Profile Photo" class="profile-photo">
             <div class="name-container">
-                <h2 class="main-title">Yun-Ting Cheng 鄭昀庭</h2>
+                <h2 class="main-title">Yun-Ting Cheng</h2>
+                <h2 class="main-title">鄭昀庭</h2>
 
             </div>
         </div>
