--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="experiments.html">Experiments</a>
             <a href="presentations.html">Presentations</a>
             <a href="publications.html">Publications</a>
-            <a href="yuntingcheng_cv.pdf" target="_blank">CV</a>
+            <a href="YunTingCheng_cv.pdf" target="_blank">CV</a>
         </nav>
     </header>
 
