--- a/research.html
+++ b/research.html
@@ -15,7 +15,7 @@
             <a href="experiments.html">Experiments</a>
             <a href="presentations.html">Presentations</a>
             <a href="publications.html">Publications</a>
-            <a href="yuntingcheng_cv.pdf" target="_blank">CV</a>
+            <a href="YunTingCheng_cv.pdf" target="_blank">CV</a>
         </nav>
     </header>
 
